fix: remove navbar margin on mobile

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -44,3 +44,9 @@
     width: 100%;
     margin-top: 8rem;
 }
+
+@media screen and (max-width: 992px){
+    #navbarSupportedContent {
+        margin-top:0;
+    }
+}
